--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/jsonwebtoken": "^9.0.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
     "twilio": "^5.2.2"
   },
   "devDependencies": {
